@@ -1,7 +1,4 @@
-DIST rake-0.8.2.gem 99328 RMD160 f813ae1ec6cb5a39e93ca44ed8b459365f3adafd SHA1 bb6c24933b51686127323732ed56fe4507b1f1ee SHA256 6d932c26000dbbd95c3a059e11239e2a525dd9d1ef9a26168ef3919d1e23292f
 DIST rake-0.8.3.gem 100352 RMD160 8a81f35787c814b427177b88c07f6d2410b799a9 SHA1 fc3060c6c3ea3b804ef95576e41706b92fd51243 SHA256 c4792392fa21fd3b00b4909947cff70dcf327ebf07b86858a35b711f7391db9c
-EBUILD rake-0.8.2-r1.ebuild 650 RMD160 60b4a71a7f9e6b329359a50298e47add9f5ed2cd SHA1 0d95ea1d4468f51e930a5c2306ebf01c59f9ac51 SHA256 94d7b41e4aa6d5f8f4ab280d43c5075a7d2160b4e4b47604903faba7fdc53331
-EBUILD rake-0.8.2.ebuild 907 RMD160 bff3b0d9e1c75f93a0d77e2cda8f75547a0d2a5e SHA1 82aaed3b207cbe603cedd5fa11c7752bdea8191e SHA256 af00e6084a6fdc71859e1ac1dbf27345fef903cace29ac3ab69e8b997dfc4c3c
 EBUILD rake-0.8.3.ebuild 650 RMD160 60b4a71a7f9e6b329359a50298e47add9f5ed2cd SHA1 0d95ea1d4468f51e930a5c2306ebf01c59f9ac51 SHA256 94d7b41e4aa6d5f8f4ab280d43c5075a7d2160b4e4b47604903faba7fdc53331
-MISC ChangeLog 7841 RMD160 d7d24b9fce14971f6d0640fc03a06d6c69985403 SHA1 a922fe940b04e544c8e8db778d3a5499c129d38b SHA256 188f82177953cd9195b65e9d929133a6ee86ba03d9dc44b451f67b2fc1eebe14
+MISC ChangeLog 7956 RMD160 53ddfa69a12d5fb20def976bc07df6f04f36a49b SHA1 6dfda7d4fb2e0cfcef540729f4fbe44597de8b2e SHA256 0b84644e923b6cb2f156f354c6b7cc225d45d9bab51885c7e71c24a8edfa4849
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
